--- a/templates/sections/contact.html
+++ b/templates/sections/contact.html
@@ -52,7 +52,8 @@
 {#                    <h3>Registered Address:</h3>#}
 {#                    <p>Mavini Sadan, Lane No – 04, Ward No – 23, Opposite Padmavati School, Raipur, Ganj, Raipur (Chhattisgarh) Pin Code : 4920019</p>#}
                     <h3>Work Address</h3>
-                    <p>Village Mongra, Plot No. 629/2, 629/3, Rajim Road, Behind Warehouse, Tehsil – Mahasamund (Chhattisgarh) <br>
+                    <p>Village Mongra, Plot No. 629/2, 629/3, Rajim Road, Behind Warehouse, <br>
+                        Tehsil – Mahasamund (Chhattisgarh)<br>
                         Pin Code : 493445</p>
                 </div>
             </div>
