--- a/templates/sections/image_slider.html
+++ b/templates/sections/image_slider.html
@@ -19,12 +19,22 @@
         <div class="carousel-inner">
             <div class="item active" id="earthika_agro_top">
 {#                <img src="{% static 'assets/img/earthika_home_page2.jpeg' %}" style="width:100%;height: 100vh;" alt="" >#}
-              <div class="centered" >
+{#                <div class="hero-container aos-init aos-animate" data-aos="fade-up">#}
+{#                    <h1>Welcome to Squad</h1>#}
+{#                    <h2>We are team of talented designers making websites with Bootstrap</h2>#}
+{#                    <a href="#about" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>#}
+{#                </div>#}
+{#              <div class="centered" >#}
                   <div class="hero-container" data-aos="fade-up">
                       <h1>EARTHIKA AGRO</h1>
+                          <h2 style="font-size: 10px; width: 60%" >At Earthika, a group of professional and experienced people have joined
+                              together in doing Vertical Agriculture to grow Turmeric, Ginger, Green chilli & Tomatoes of the highest quality
+                          </h2>
+
                   </div>
+
               </div>
-            </div>
+{#            </div>#}
 
             <div class="item" id="turmeric_top">
 {#                <img src="{% static 'assets/img/turmeric-powder2.jpg' %}" alt="" style="width:100%;height: 100vh;" >#}
