--- a/templates/sections/faq.html
+++ b/templates/sections/faq.html
@@ -5,7 +5,7 @@
             <h2>FAQ</h2>
         </div>
         <div class="row no-gutters">
-            <div class="col-xl-6"  data-aos="fade-up">
+            <div class="col-xl-12"  data-aos="fade-up">
 {#                <div class="faq_question_div">#}
 {#                    <div class="col-xl-12 content"  data-aos="fade-up"><div  class="faq_question" id="faq_question1" class="faq_question" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">What Is Vertical Farming <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon></p></div></div>#}
 {#                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer" id="faq_answer1">Vertical farming is the practice of producing food on vertically inclined surfaces. Instead of farming vegetables and other foods on a single level, such as in a field or a greenhouse, this method produces foods in vertically stacked layers commonly integrated into other structures like a skyscraper, shipping container or repurposed warehouse.#}
@@ -13,49 +13,50 @@
 {#                    </div>#}
 {#                </div>#}
                 <div class="faq_question_div">
-                    <div class="col-xl-12 content"  data-aos="fade-up"><div class="faq_question" id="faq_question1" style="margin-top:unset !important;background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">What Is Vertical Farming <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon></p></div></div>
-                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer" id="faq_answer2">Vertical farming is the practice of producing food on vertically inclined surfaces. Instead of farming vegetables and other foods on a single level, such as in a field or a greenhouse, this method produces foods in vertically stacked layers commonly integrated into other structures like a skyscraper, shipping container or repurposed warehouse.
-                        Using Controlled Environment Agriculture (CEA) technology, this modern idea uses indoor farming techniques.</p>
+                    <div class="col-xl-12 content"  data-aos="fade-up"><div class="faq_question" id="faq_question1" style="margin-top:unset !important;background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">Is Vertical Farming the future? <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon></p></div></div>
+                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer" id="faq_answer2">Vertical farms are part of a rising influx of ‘urban agriculture,’ which allows food to be grown closer to large population points. Now more people are recognizing the value of vertical farming, although few people understand what it really is.
+                        Like anything else that uses technology, the future is likely to bring a lot of innovation and improvement. We can expect to see even greater efficiency, larger-scale production, more technological additions, and (hopefully) a more widespread understanding of the value of vertical farms.</p>
                     </div>
                 </div>
                 <div class="faq_question_div">
-                    <div class="col-xl-12 content"  data-aos="fade-up"><div class="faq_question" id="faq_question2" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">How Vertical Farming Works <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon></p></div></div>
-                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer" id="faq_answer2">There are four critical areas in understanding how vertical farming works: 1. Physical layout, 2. Lighting, 3. Growing medium, and 4. Sustainability features.
-                        Firstly, the primary goal of vertical farming is producing more foods per square meter. To accomplish this goal, crops are cultivated in stacked layers in a tower life structure. Secondly, a perfect combination of natural and artificial lights is used to maintain the perfect light level in the room. Technologies such as rotating beds are used to improve lighting efficiency.
-                        Thirdly, instead of soil, aeroponic, aquaponic or hydroponic growing mediums are used. Peat moss or coconut husks and similar non-soil mediums are very common in vertical farming. Finally, the vertical farming method uses various sustainability features to offset the energy cost of farming. In fact, vertical farming uses 95% less water.</p>
+                    <div class="col-xl-12 content"  data-aos="fade-up"><div class="faq_question" id="faq_question2" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">What is Vertical Farming? <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon></p></div></div>
+                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer" id="faq_answer2">Vertical farms can take many different shapes and sizes, but they operate the same at their cores. First of all, in vertical farm crops, they aren’t grown horizontally (which you may have gleaned from the name), but in a stacked or tower formation. In tower-style vertical farming, plants are grown upward, intertwining into the lattice or supporting structure. In the stacked method, the vertical ‘stacks’ are basically growing trays, supported by shelves on top of one another. Vertical farms are maintained in indoor areas using Controlled Environment Agriculture, or CEA, techniques, and technology. This means that the farmer can control everything from heating to humidity, to light and watering cycles. </p>
                     </div>
                 </div>
 
                 <div class="faq_question_div">
-                    <div class="col-xl-12 content"   data-aos="fade-up"><div class="faq_question" id="faq_question3" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">Benefits of Vertical Farming <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon></p></div></div>
-                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer"id="faq_answer3"> Advantages<br>
-                        - It offers a plan to handle future food demands<br><br>
-                        - It allows crops to grow year-round<br><br>
-                        - It uses significantly less water<br><br>
-                        - Weather doesn't affect the crops<br><br>
-                        - More organic crops can be grown<br><br>
-                        - There is less exposure to chemicals and disease</p>
+                    <div class="col-xl-12 content"   data-aos="fade-up"><div class="faq_question" id="faq_question3" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">What are the benefits of vertical farming? <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon></p></div></div>
+                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer"id="faq_answer3">
+                        - Thanks to their inside locations, vertical farms have a major advantage over traditional farming. They’re more or less protected against the threat of pests and contamination.<br>
+                        - They can produce consistently, regardless of the season. Field agriculture is primarily a seasonal endeavor. There are summer crops, autumn crops, and so on, but you can’t grow it all at once. If you’re farming indoors with Controlled Environment Agriculture, as you’d do with a vertical farm, this becomes a non-issue. Not only that, the harvests are predictable and reliable. This makes it easier to plan food production and deliver on the demand.
+
+                    </p>
                     </div>
                 </div>
                 <div class="faq_question_div">
-                    <div class="col-xl-12 content"   data-aos="fade-up"><div class="faq_question" id="faq_question3" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">Crops can be grow in vertical farming <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon> </p></div></div>
-                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer"id="faq_answer3">Considering the huge demand in International Market, we have selected Turmeric crop to be grown by Vertical Farming. Understand that we produce 5% Curcumin content Turmeric in Polyhouse, which is eligible for Export. Another property of Turmeric is its shelf life. 3 Years nothing will happen to this crop, once it is dried and we have a technology, through which we can preserve it till 6 years. India produces 82% Turmeric (Curcumin less than 3%) in world and we are major consumer of such type of turmeric. Domestically it is consumed mainly in powder form. So in future we can also start producing 5% of Curcumin Turmeric Powder which will be huge business, which is not yet started.</p>
+                    <div class="col-xl-12 content"   data-aos="fade-up"><div class="faq_question" id="faq_question3" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">
+                        What are the
+                        Advantages of Vertical farming
+                        over regular farming
+                        ?
+                        <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon> </p></div></div>
+                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer"id="faq_answer3">Vertical farming has plenty of advantages over traditional agriculture that makes it an attractive solution for food sourcing. First, and one of the biggest draws for the common populace toward vertical farming is how little space is needed in relation to the amount of crops that can be produced. By producing so much food in so little space, we’re able to free up a lot of land. </p>
                     </div>
                 </div>
-                <div class="faq_question_div">
-                    <div class="col-xl-12 content"   data-aos="fade-up"><div class="faq_question" id="faq_question3" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">Technology used in Vertical Farming <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon> </p></div></div>
-                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer"id="faq_answer3">Vertical farming is the practice of growing crops in vertically stacked layers. It often incorporates Controlled-Environment Agriculture  which aims to optimize plant growth, and soilless farming techniques such as hydroponics, aquaponics, and aeroponics.</p>
-                    </div>
-                </div>
-                <div class="faq_question_div">
-                    <div class="col-xl-12 content"   data-aos="fade-up"><div class="faq_question" id="faq_question3" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">Is vertical farming efficient  <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon> </p></div></div>
-                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer"id="faq_answer3">Vertical farming is efficient as well as sustainable technology. Vertical Farming has Lots of advantages over traditional farming. Most importantly it is Farming in your control. Control means control of production, maintaining quality, prevention from diseases.</p>
-                    </div>
-                </div>
+{#                <div class="faq_question_div">#}
+{#                    <div class="col-xl-12 content"   data-aos="fade-up"><div class="faq_question" id="faq_question3" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">Technology used in Vertical Farming <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon> </p></div></div>#}
+{#                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer"id="faq_answer3">Vertical farming is the practice of growing crops in vertically stacked layers. It often incorporates Controlled-Environment Agriculture  which aims to optimize plant growth, and soilless farming techniques such as hydroponics, aquaponics, and aeroponics.</p>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="faq_question_div">#}
+{#                    <div class="col-xl-12 content"   data-aos="fade-up"><div class="faq_question" id="faq_question3" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">Is vertical farming efficient  <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon> </p></div></div>#}
+{#                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer"id="faq_answer3">Vertical farming is efficient as well as sustainable technology. Vertical Farming has Lots of advantages over traditional farming. Most importantly it is Farming in your control. Control means control of production, maintaining quality, prevention from diseases.</p>#}
+{#                    </div>#}
+{#                </div>#}
             </div>
-            <div class="col-xl-6"  data-aos="fade-up">
-                <img src="{% static 'assets/img/vertical_farming3.jpg' %}" width="100%" height="300px">
-            </div>
+{#            <div class="col-xl-6"  data-aos="fade-up">#}
+{#                <img src="{% static 'assets/img/shutter_stock/vertical_farming/vertical2.jpg' %}" width="100%" height="300px">#}
+{#            </div>#}
 
         </div>
 
