--- a/templates/sections/faq.html
+++ b/templates/sections/faq.html
@@ -43,6 +43,27 @@
                     <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer"id="faq_answer3">Vertical farming has plenty of advantages over traditional agriculture that makes it an attractive solution for food sourcing. First, and one of the biggest draws for the common populace toward vertical farming is how little space is needed in relation to the amount of crops that can be produced. By producing so much food in so little space, we’re able to free up a lot of land. </p>
                     </div>
                 </div>
+                <div class="faq_question_div">
+                    <div class="col-xl-12 content"   data-aos="fade-up"><div class="faq_question" id="faq_question3" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">
+                        What is Vermicomposting?
+                        <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon> </p></div></div>
+                    <div class="col-xl-12"  data-aos="fade-up">
+                        <p class="faq_answer"id="faq_answer3">
+                            Vermicomposting is a process based on earthworms and microorganisms, whose joint action provides degradation and detoxification of organic waste as well as conversion into a product to be used for agronomic purposes. This eco-friendly method is cost effective and is the best among other remediation processes. In the earthworm gut, enzymatic activities lead to toxic metal immobilization, which suggests that vermitechnology is as efficient process for the remediation of heavy metals from industrial organic wastes/sludges.
+                        </p>
+                    </div>
+                </div>
+                <div class="faq_question_div">
+                    <div class="col-xl-12 content"   data-aos="fade-up"><div class="faq_question" id="faq_question3" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">
+                        What is Continuous Flow Vermicomposting technology ?
+                        <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon> </p></div></div>
+                    <div class="col-xl-12"  data-aos="fade-up">
+                        <p class="faq_answer"id="faq_answer3">
+                            Continuous flow is a method of vermicomposting where composting worms are fed organic matter from the top and worm castings are eventually harvested from the bottom or removed from a bottom tray.
+                            Continuous flow systems are advantageous because they provide ease of separation of worms from the castings, it saves labor and it allows for maintenance of more content conditions than outdoor systems, hence allowing greater efficiency.
+                        </p>
+                    </div>
+                </div>
 {#                <div class="faq_question_div">#}
 {#                    <div class="col-xl-12 content"   data-aos="fade-up"><div class="faq_question" id="faq_question3" style="background: #1c7430; border-radius: 25px"><p style="background: none !important;text-align: unset !important;margin-left: 20px">Technology used in Vertical Farming <icon class="bx bx-caret-down" style="float: right;font-size: 20px"></icon> </p></div></div>#}
 {#                    <div class="col-xl-12"  data-aos="fade-up"><p class="faq_answer"id="faq_answer3">Vertical farming is the practice of growing crops in vertically stacked layers. It often incorporates Controlled-Environment Agriculture  which aims to optimize plant growth, and soilless farming techniques such as hydroponics, aquaponics, and aeroponics.</p>#}
