--- a/templates/sections/products.html
+++ b/templates/sections/products.html
@@ -76,7 +76,7 @@
                                 </div>
                             </div>
                                 <div class="col-xl-12 aos-init" align="center">
-                                    <img style="width: 70%;height: 500px;margin-top: 40px" src="/media/{{ product.image }}"   class="{{ img.id }}" width="500px" />
+                                    <img style="width: 100%;height: 500px;margin-top: 40px" src="/media/{{ product.image }}"   class="{{ img.id }}" width="100%" height="100%" />
                                 </div>
 
 
