--- a/templates/sections/technology.html
+++ b/templates/sections/technology.html
@@ -17,15 +17,6 @@
 
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-                    <div class="icon"><i class="bx bx-horizontal-center"></i></div>
-                    <h4 class="title">
-                            Non-Conventional High Yield Production
-                    </h4>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                     <div class="icon"><i class="bx bx-network-chart"></i></div>
                     <h4 class="title">IOT Based Monitoring For Better Disease Control</h4>
                 </div>
@@ -36,6 +27,14 @@
                     <div class="icon"><i class="bx bx-cloud"></i></div>
                     <h4 class="title">
                         Farming In Controlled Environment Within Poly-House Gives Better Management</h4>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+                    <div class="icon"><i class="bx bx-horizontal-center"></i></div>
+                    <h4 class="title">
+                            Continuous Flow Through Worm Bin
+                    </h4>
                 </div>
             </div>
             <div class="col-md-12 col-lg-12 d-flex align-items-stretch mb-12 mb-lg-0 " style="margin-top: 20px">
