--- a/templates/sections/contact.html
+++ b/templates/sections/contact.html
@@ -62,7 +62,7 @@
                 <div class="info-box  mb-4">
                     <i class="bx bx-envelope"></i>
                     <h3>Email Us</h3>
-                    <p>ravi@binomialsolutions.com</p>
+                    <p>info@earthikaagro.com</p>
                 </div>
             </div>
 
