--- a/templates/sections/technology.html
+++ b/templates/sections/technology.html
@@ -33,7 +33,7 @@
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
                     <div class="icon"><i class="bx bx-horizontal-center"></i></div>
                     <h4 class="title">
-                            Continuous Flow Through Worm Bin
+                            Continuous Flow Through
                     </h4>
                 </div>
             </div>
