--- a/templates/sections/image_slider.html
+++ b/templates/sections/image_slider.html
@@ -25,8 +25,10 @@
 {#                    <a href="#about" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>#}
 {#                </div>#}
 {#              <div class="centered" >#}
-                  <div class="hero-container" data-aos="fade-up">
-                      <h1>EARTHIKA AGRO</h1>
+                  <div class="hero-container" data-aos="fade-up" style="margin-top: 7%">
+{#                      <h1>EARTHIKA AGRO</h1>#}
+{#                      <h1 class="desktop_div"><font style="color: #186e0a">EARTHIKA</font> <font style="color: #a8e232;">AGRO</font><br><font color="gray"size="20px" style="font-size: 20px;">Empowering Greenolution</font></h1>#}
+                      <h1 class="mobile_div" style="font-size: 40px"><font style="color: #186e0a;">EARTHIKA</font> <font style="color: #a8e232;size: 20px;">AGRO</font><br><font color="gray"size="20px" style="font-size: 10px;">Empowering Greenolution</font></h1>
 {#                          <h2 style="font-size: 15px;font-weight: bold; width: 60%" >At Earthika, a group of professional and experienced people have joined#}
 {#                              together in doing Vertical Agriculture to grow Turmeric, Ginger, Green chilli & Tomatoes of the highest quality#}
 {#                          </h2>#}
@@ -38,8 +40,8 @@
             <div class="item" id="turmeric_top">
 {#                <img src="{% static 'assets/img/turmeric-powder2.jpg' %}" alt="" style="width:100%;height: 100vh;" >#}
                 <div class="centered">
-                    <div class="hero-container" data-aos="fade-up" style="margin-top: 100px">
-                        <h1>TURMERIC</h1>
+                    <div class="hero-container" data-aos="fade-up" style="margin-top: 120px">
+{#                        <h1>TURMERIC</h1>#}
                     </div>
                 </div>
             </div>
@@ -139,6 +141,7 @@
 {#</script>#}
 
 <script>
+    $( document ).ready(function() {
 var myIndex = 0;
 carousel();
 
@@ -151,8 +154,17 @@ function carousel() {
   myIndex++;
   if (myIndex > x.length) {myIndex = 1}
   x[myIndex-1].style.display = "block";
-  setTimeout(carousel,4000); // Change image every 2 seconds
+  if (myIndex === 1){
+      setTimeout(carousel,2000);
+  }
+  else {
+  setTimeout(carousel,200000);
+  }
+
+  // Change image every 2 seconds
 }
+});
+
 </script>
 
 
