--- a/templates/sections/technology.html
+++ b/templates/sections/technology.html
@@ -38,8 +38,10 @@
                 </div>
             </div>
             <div class="col-md-12 col-lg-12 d-flex align-items-stretch mb-12 mb-lg-0 " style="margin-top: 20px">
-                <img src="{% static 'assets/img/vertical_farming6.jpg' %}"  style="padding-right: 1%;width: 50%;">
-                <img src="{% static 'assets/img/vertical_farming4.jpg' %}" style="padding-left: 1%;width: 50%;" >
+                <img src="{% static 'assets/img/shutter_stock/site_images/technology/technology2.jpg' %}"  style="padding-right: 1%;" width="25%">
+                <img src="{% static 'assets/img/shutter_stock/site_images/technology/technology1.jpg' %}"  style="padding-right: 1%;" width="25%">
+                <img src="{% static 'assets/img/shutter_stock/site_images/technology/technology3.jpg' %}"  style="padding-right: 1%;" width="25%">
+                <img src="{% static 'assets/img/shutter_stock/site_images/technology/technology4.jpg' %}"  style="padding-left: 1%;" width="25%">
 {#                <img src="{% static 'assets/img/vertical_farming1.jpg' %}"  style="padding-right: 1%;width: 25%;">#}
 {#                <img src="{% static 'assets/img/vertical_farming2.jpg' %}" style="padding-left: 1%;width: 25%;" >#}
 {#                <img src="{% static 'assets/img/vertical_farming3.jpg' %}" style="padding-left: 1%;width: 25%;" >#}
