--- a/templates/sections/gallery.html
+++ b/templates/sections/gallery.html
@@ -23,9 +23,9 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                 <div class="portfolio-wrap">
-                    <img src="{% static 'assets/img/gallery/gturmeric2.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'assets/img/shutter_stock/site_images/products/turmeric_product.jpg' %}" class="img-fluid" alt="">
                     <div class="portfolio-links">
-                        <a href="{% static 'assets/img/gallery/gturmeric2.jpg' %}" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                        <a href="{% static 'assets/img/shutter_stock/site_images/products/turmeric_product.jpg' %}" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                                         <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
                     </div>
                 </div>
@@ -33,9 +33,9 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                 <div class="portfolio-wrap">
-                    <img src="{% static 'assets/img/gallery/gcompost1.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'assets/img/shutter_stock/site_images/products/vermi_compost_product.jpg' %}" class="img-fluid" alt="">
                     <div class="portfolio-links">
-                        <a href="{% static 'assets/img/gallery/gcompost1.jpeg' %}" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                        <a href="{% static 'assets/img/shutter_stock/site_images/products/vermi_compost_product.jpg' %}" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
                         {#                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>#}
                     </div>
                 </div>
@@ -43,9 +43,9 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                 <div class="portfolio-wrap">
-                    <img src="{% static 'assets/img/gallery/gginger1.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'assets/img/shutter_stock/site_images/products/ginger_product.jpg' %}" class="img-fluid" alt="">
                     <div class="portfolio-links">
-                        <a href="{% static 'assets/img/gallery/gginger1.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                        <a href="{% static 'assets/img/shutter_stock/site_images/products/ginger_product.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
                         {#                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>#}
                     </div>
                 </div>
@@ -53,9 +53,9 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                 <div class="portfolio-wrap">
-                    <img src="{% static 'assets/img/gallery/gtomato3.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'assets/img/shutter_stock/site_images/products/tomato_product.jpg' %}" class="img-fluid" alt="">
                     <div class="portfolio-links">
-                        <a href="{% static 'assets/img/gallery/gtomato3.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+                        <a href="{% static 'assets/img/shutter_stock/site_images/products/tomato_product.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
                         {#                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>#}
                     </div>
                 </div>
@@ -64,9 +64,9 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                 <div class="portfolio-wrap">
-                    <img src="{% static 'assets/img/gallery/gturmeric1.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'assets/img/shutter_stock/site_images/products/turmeric_product2.jpg' %}" class="img-fluid" alt="">
                     <div class="portfolio-links">
-                        <a href="{% static 'assets/img/gallery/gturmeric1.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+                        <a href="{% static 'assets/img/shutter_stock/site_images/products/turmeric_product2.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
                         {#                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>#}
                     </div>
                 </div>
@@ -74,36 +74,36 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                 <div class="portfolio-wrap">
-                    <img src="{% static 'assets/img/gallery/gtomato1.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'assets/img/shutter_stock/site_images/products/tomato_product2.jpg' %}" class="img-fluid" alt="">
                     <div class="portfolio-links">
-                        <a href="{% static 'assets/img/gallery/gtomato1.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+                        <a href="{% static 'assets/img/shutter_stock/site_images/products/tomato_product2.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
                         {#                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>#}
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                 <div class="portfolio-wrap">
-                    <img src="{% static 'assets/img/gallery/gchilli1.jpg' %}" class="img-fluid" alt="" width="250px">
+                    <img src="{% static 'assets/img/shutter_stock/site_images/products/green_chilli_product.jpg' %}" class="img-fluid" alt="">
                     <div class="portfolio-links">
-                        <a href="{% static 'assets/img/gallery/gchilli1.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+                        <a href="{% static 'assets/img/shutter_stock/site_images/products/green_chilli_product.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
                         {#                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>#}
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                 <div class="portfolio-wrap">
-                    <img src="{% static 'assets/img/gallery/gginger2.jpg' %}" class="img-fluid" alt="" width="300px">
+                    <img src="{% static 'assets/img/shutter_stock/site_images/products/ginger_product2.jpg' %}" class="img-fluid" alt="" >
                     <div class="portfolio-links">
-                        <a href="{% static 'assets/img/gallery/gginger2.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+                        <a href="{% static 'assets/img/shutter_stock/site_images/products/ginger_product2.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
                         {#                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>#}
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                 <div class="portfolio-wrap">
-                    <img src="{% static 'assets/img/gallery/gturmeric3.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'assets/img/shutter_stock/site_images/products/turmeric_product3.jpg' %}" class="img-fluid" alt="">
                     <div class="portfolio-links">
-                        <a href="{% static 'assets/img/gallery/green_chilli_powder.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+                        <a href="{% static 'assets/img/shutter_stock/site_images/products/turmeric_product3.jpg' %}" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
                         {#                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>#}
                     </div>
                 </div>
@@ -121,18 +121,18 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">{#                    <img class="d-block w-100" src=".../800x400" alt="First slide">#}
-                    <img class="d-block w-100" src="{% static 'assets/img/tomato.jpg' %}" style="width:100%;">
+                    <img class="d-block w-100" src="{% static 'assets/img/shutter_stock/site_images/products/tomato_product.jpg' %}" style="width:100%;">
                 </div>
-                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/turmeric1.jpg' %}"  style="width:100%;"></div>
-                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/ginger1.jpg' %}"  style="width:100%;"></div>
-                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/tomato2.jpg' %}"  style="width:100%;"></div>
-                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/chilli1.jpg' %}"  style="width:100%;"></div>
-                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/vermi_compost1.jpg' %}"  style="width:100%;"></div>
 
-                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/gturmeric2.jpg' %}"  style="width:100%;"></div>
-                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/ginger2.jpg' %}"  style="width:100%;"></div>
-                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/gtomato3.jpg' %}"  style="width:100%;"></div>
-                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/chilli2.jpg' %}"  style="width:100%;"></div>
+                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/shutter_stock/site_images/products/turmeric_product.jpg' %}"  style="width:100%;"></div>
+                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/shutter_stock/site_images/products/ginger_product.jpg' %}"  style="width:100%;"></div>
+                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/shutter_stock/site_images/products/green_chilli_product.jpg' %}"  style="width:100%;"></div>
+                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/shutter_stock/site_images/products/vermi_compost_product.jpg' %}"  style="width:100%;"></div>
+
+                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/shutter_stock/site_images/products/turmeric_product2.jpg' %}"  style="width:100%;"></div>
+                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/shutter_stock/site_images/products/tomato_product2.jpg' %}"  style="width:100%;"></div>
+                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/shutter_stock/site_images/products/ginger_product2.jpg' %}"  style="width:100%;"></div>
+                <div class="carousel-item"><img class="d-block w-100" src="{% static 'assets/img/shutter_stock/site_images/products/turmeric_product3.jpg' %}"  style="width:100%;"></div>
 
 
 
