--- a/templates/sections/technology.html
+++ b/templates/sections/technology.html
@@ -9,7 +9,7 @@
 
         <div class="row">
             <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-                <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+                <div class="icon-box" data-aos="fade-up" data-aos-delay="200" style="width: 100%">
                     <div class="icon"><i class="bx bx-cube"></i></div>
                     <h4 class="title">30 Acre Production In 1 Acre</h4>
                 </div>
@@ -38,8 +38,10 @@
                 </div>
             </div>
             <div class="col-md-12 col-lg-12 d-flex align-items-stretch mb-12 mb-lg-0 " style="margin-top: 20px">
-                <img src="{% static 'assets/img/vertical_farming6.jpg' %}"  style="padding-right: 1%;width: 50%;">
-                <img src="{% static 'assets/img/vertical_farming4.jpg' %}" style="padding-left: 1%;width: 50%;" >
+                <img src="{% static 'assets/img/shutter_stock/site_images/technology/technology2.jpg' %}"  style="padding-right: 1%;" width="25%">
+                <img src="{% static 'assets/img/shutter_stock/site_images/technology/technology1.jpg' %}"  style="padding-right: 1%;" width="25%">
+                <img src="{% static 'assets/img/shutter_stock/site_images/technology/technology3.jpg' %}"  style="padding-right: 1%;" width="25%">
+                <img src="{% static 'assets/img/shutter_stock/site_images/technology/technology4.jpg' %}"  style="padding-left: 1%;" width="25%">
 {#                <img src="{% static 'assets/img/vertical_farming1.jpg' %}"  style="padding-right: 1%;width: 25%;">#}
 {#                <img src="{% static 'assets/img/vertical_farming2.jpg' %}" style="padding-left: 1%;width: 25%;" >#}
 {#                <img src="{% static 'assets/img/vertical_farming3.jpg' %}" style="padding-left: 1%;width: 25%;" >#}
