--- a/templates/sections/image_slider.html
+++ b/templates/sections/image_slider.html
@@ -3,21 +3,58 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+<div id="carouselExampleControls" class="carousel carousel-fade" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100 desktop_div" src="{% static 'assets/img/shutter_stock/image_slide/agro_products.jpg' %}"  >
+            <img class="d-block w-100 mobile_div" src="{% static 'assets/img/shutter_stock/image_slide/agro_products_mobile.jpg' %}"  >
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100 desktop_div" src="{% static 'assets/img/shutter_stock/image_slide/agro_ginger_desktop.jpg' %}"  style="height: 100vh;background: #FFDE6A;">
+            <img class="d-block w-100 mobile_div" src="{% static 'assets/img/shutter_stock/image_slide/agro_ginger_mobile.jpg' %}"  style="height: 100vh;background: #FFDE6A;">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100 desktop_div" src="{% static 'assets/img/shutter_stock/image_slide/turmeric_desktop.jpg' %}"  >
+            <img class="d-block w-100 mobile_div" src="{% static 'assets/img/shutter_stock/image_slide/agro_products_mobile.jpg' %}"  >
+        </div>
+        <div class="carousel-item">{#                    <img class="d-block w-100" src=".../800x400" alt="First slide">#}
+            <img class="d-block w-100 desktop_div" src="{% static 'assets/img/shutter_stock/image_slide/earthika_agro_desktop.jpg' %}" style="">
+            <img class="d-block w-100 mobile_div" src="{% static 'assets/img/shutter_stock/image_slide/agro_mobile.jpg' %}" >
+        </div>
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
+
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+<style>
+    .carousel-item{
+        overflow: hidden;
+        height: 100vh;
+
+    }
+</style>
+{#    <div id="myCarousel" class="carousel slide" data-ride="carousel">#}
+{#        <!-- Indicators -->#}
+{#        <ol class="carousel-indicators">#}
 {#            <li data-target="#myCarousel" data-slide-to="0" ></li>#}
 {#            <li data-target="#myCarousel" data-slide-to="1"></li>#}
 {#            <li data-target="#myCarousel" data-slide-to="2"></li>#}
 {#            <li data-target="#myCarousel" data-slide-to="3"></li>#}
 {#            <li data-target="#myCarousel" data-slide-to="4"></li>#}
 {#            <li data-target="#myCarousel" data-slide-to="5"></li>#}
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner">
-            <div class="item" id="earthika_agro_top">
+{#        </ol>#}
+{#        #}
+{##}
+{#        <!-- Wrapper for slides -->#}
+{#        <div class="carousel-inner">#}
+{#            <div class="item" id="earthika_agro_top">#}
 {#                <img src="{% static 'assets/img/earthika_home_page2.jpeg' %}" style="width:100%;height: 100vh;" alt="" >#}
 {#                <div class="hero-container aos-init aos-animate" data-aos="fade-up">#}
 {#                    <h1>Welcome to Squad</h1>#}
@@ -25,63 +62,76 @@
 {#                    <a href="#about" class="btn-get-started scrollto"><i class="bx bx-chevrons-down"></i></a>#}
 {#                </div>#}
 {#              <div class="centered" >#}
-                  <div class="hero-container" data-aos="fade-up" style="margin-top: 7%">
-{#                      <h1>EARTHIKA AGRO</h1>#}
+{#                  <div class="hero-container" data-aos="fade-up" style="margin-top: 7%">#}
+{#                      <img class="desktop_div" src="{% static 'assets/img/shutter_stock/image_slide/agro.jpg' %}" alt="" style="width:100%;height:100vh;" >#}
+{#                      <img class="mobile_div" src="{% static 'assets/img/shutter_stock/image_slide/agro_mobile.jpg' %}" alt="" style="height:100vh;background: #f0f1cd;" >#}
+{##}
+                      {#                      <h1>EARTHIKA AGRO</h1>#}
 {#                      <h1 class="desktop_div"><font style="color: #186e0a">EARTHIKA</font> <font style="color: #a8e232;">AGRO</font><br><font color="gray"size="20px" style="font-size: 20px;">Empowering Greenolution</font></h1>#}
-                      <h1 class="mobile_div" style="font-size: 40px"><font style="color: #186e0a;">EARTHIKA</font> <font style="color: #a8e232;size: 20px;">AGRO</font><br><font color="gray"size="20px" style="font-size: 10px;">Empowering Greenolution</font></h1>
+{#                      <h1 class="mobile_div" style="font-size: 40px"><font style="color: #186e0a;">EARTHIKA</font> <font style="color: #a8e232;size: 20px;">AGRO</font><br><font color="gray"size="20px" style="font-size: 10px;">Empowering Greenolution</font></h1>#}
 {#                          <h2 style="font-size: 15px;font-weight: bold; width: 60%" >At Earthika, a group of professional and experienced people have joined#}
 {#                              together in doing Vertical Agriculture to grow Turmeric, Ginger, Green chilli & Tomatoes of the highest quality#}
 {#                          </h2>#}
-
-                  </div>
-              </div>
+{##}
+{#                  </div>#}
+{#              </div>#}
 {#            </div>#}
-
-            <div class="item" id="turmeric_top">
-{#                <img src="{% static 'assets/img/turmeric-powder2.jpg' %}" alt="" style="width:100%;height: 100vh;" >#}
-                <div class="centered">
-                    <div class="hero-container" data-aos="fade-up" style="margin-top: 120px">
-{#                        <h1>TURMERIC</h1>#}
-                    </div>
-                </div>
-            </div>
-
-            <div class="item" id="tomato_top">
+{##}
+{#            <div class="item" id="turmeric_top">#}
+{#                <img class="desktop_div" src="{% static 'assets/img/shutter_stock/image_slide/agro2.png' %}" alt="" style="width:100%;height:100vh;background: #f0f1cd;" >#}
+{#                <img class="mobile_div" src="{% static 'assets/img/shutter_stock/image_slide/agro_ginger_mobile.png' %}" alt="" style="height:100vh;background: #f0f1cd;" >#}
+{#                <img class="desktop_div" src="{% static 'assets/img/shutter_stock/image_slide/agro2.png' %}" alt="" style="width:100%;" >#}
+{#                <div class="centered">#}
+{#                    <div class="hero-container" data-aos="fade-up" >#}
+{#                        <h1>GINGER</h1>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{##}
+{#            <div class="item" id="tomato_top">#}
 {#                <img src="{% static 'assets/img/tomato.jpg' %}" alt="" style="width:100%;height: 100vh;" >#}
-                <div class="centered">
-                    <div class="hero-container" data-aos="fade-up">
-                        <h1>TOMATO</h1>
-                    </div>
-                </div>
-            </div>
-
-            <div class="item" id="ginger_top">
+{#                <div class="centered">#}
+{#                    <div class="hero-container" data-aos="fade-up">#}
+{#                        <h1>TOMATO</h1>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{##}
+{#            <div class="item" id="ginger_top">#}
 {#                <img src="{% static 'assets/img/ginger.jpg' %}" alt="" style="width:100%; height: 100vh" >#}
-                <div class="centered" >
-                    <div class="hero-container" data-aos="fade-up">
-                        <h1>GINGER</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="item" id="green_chilli_top">
+{#                <div class="centered" >#}
+{#                    <div class="hero-container" data-aos="fade-up">#}
+{#                        <h1>GINGER</h1>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="item" id="green_chilli_top">#}
 {#                <img src="{% static 'assets/img/chilli.jpg' %}" alt="" style="width:100%; height: 100vh" >#}
-                <div class="centered">
-                    <div class="hero-container" data-aos="fade-up">
-                        <h1>GREEN CHILLI</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="item" id="compost_top">
+{#                <div class="centered">#}
+{#                    <div class="hero-container" data-aos="fade-up">#}
+{#                        <h1>GREEN CHILLI</h1>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#            <div class="item" id="compost_top">#}
 {#                <img src="{% static 'assets/img/compost.jpeg' %}" alt="" style="width:100%; height: 100vh" >#}
-                <div class="centered">
-                    <div class="hero-container" data-aos="fade-up">
-                        <h1>COMPOST</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Left and right controls -->
+{#                <div class="centered">#}
+{#                    <div class="hero-container" data-aos="fade-up">#}
+{#                        <h1>COMPOST</h1>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">#}
+{#            <span class="carousel-control-prev-icon" aria-hidden="true"></span>#}
+{#            <span class="sr-only">Previous</span>#}
+{#        </a>#}
+{#        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">#}
+{#            <span class="carousel-control-next-icon" aria-hidden="true"></span>#}
+{#            <span class="sr-only">Next</span>#}
+{#        </a>#}
+{##}
+{#        <!-- Left and right controls -->#}
 {#        <a class="left carousel-control" id="left_carousel_control" href="#myCarousel" data-slide="prev" >#}
 {#            <span class="glyphicon glyphicon-chevron-left"></span>#}
 {#            <span class="sr-only">Previous</span>#}
@@ -90,7 +140,7 @@
 {#            <span class="glyphicon glyphicon-chevron-right"></span>#}
 {#            <span class="sr-only">Next</span>#}
 {#        </a>#}
-    </div>
+{#    </div>#}
 {#<script>#}
 {#    var myIndex = 0;#}
 {#    var myIndex2 = 0;#}
@@ -139,33 +189,66 @@
 {#  x[slideIndex-1].style.display = "block";#}
 {#}#}
 {#</script>#}
-
+<style>
+    .carousel-fade .carousel-inner .item {
+        opacity: 0;
+        -webkit-transition-property: opacity;
+        -moz-transition-property: opacity;
+        -o-transition-property: opacity;
+        transition-property: opacity;
+    }
+    .carousel-fade .carousel-inner .active {
+        opacity: 1;
+    }
+    .carousel-fade .carousel-inner .active.left,
+    .carousel-fade .carousel-inner .active.right {
+        left: 0;
+        opacity: 0;
+        z-index: 1;
+    }
+    .carousel-fade .carousel-inner .next.left,
+    .carousel-fade .carousel-inner .prev.right {
+        opacity: 1;
+    }
+    .carousel-fade .carousel-control {
+        z-index: 2;
+    }
+</style>
 <script>
-    $( document ).ready(function() {
-var myIndex = 0;
-carousel();
-
-function carousel() {
-  var i;
-  var x = document.getElementsByClassName("item");
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";
-  }
-  myIndex++;
-  if (myIndex > x.length) {myIndex = 1}
-  x[myIndex-1].style.display = "block";
-  if (myIndex === 1){
-      setTimeout(carousel,2000);
-  }
-  else {
-  setTimeout(carousel,200000);
-  }
-
-  // Change image every 2 seconds
-}
-});
-
+    a= $(window).width();
+    if (a <= 450){
+        $('.desktop_div').css('display','none');
+        $('.mobile_div').css('display','block');
+    }
+    else {
+        $('.mobile_div').css('display','none');
+    }
 </script>
+    {#$( document ).ready(function() {#}
+{#var myIndex = 0;#}
+{#carousel();#}
+{##}
+{#function carousel() {#}
+{#  var i;#}
+{#  var x = document.getElementsByClassName("item");#}
+{#  for (i = 0; i < x.length; i++) {#}
+{#    x[i].style.display = "none";#}
+{#  }#}
+{#  myIndex++;#}
+{#  if (myIndex > x.length) {myIndex = 1}#}
+{#  x[myIndex-1].style.display = "block";#}
+{#  if (myIndex === 3){#}
+{#      setTimeout(carousel,200000);#}
+{#  }#}
+{#  else {#}
+{#  setTimeout(carousel,8000);#}
+{#  }#}
+{##}
+{#  // Change image every 2 seconds#}
+{#}#}
+{#});#}
+{##}
+{#</script>#}
 
 
 {##}
@@ -202,3 +285,17 @@ function carousel() {
 {#1st- #B6D36B#}
 {#tomato - #448158#}
 {#3rd- turmeric -#697274#}
+<style>
+    .mobile_div{
+        display: none !important;
+    }
+
+    @media (max-width: 768px) {
+        .desktop_div{
+            display: none !important;
+        }
+        .mobile_div{
+            display: block !important;
+        }
+    }
+</style>
